--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -1,7 +1,7 @@
 <h2>Reactivos: <small> Dinámicos </small></h2>
 <hr>
 
-<form autocomplete="off">
+<form [formGroup]="myForm" (ngSubmit)="onSubmit()" autocomplete="off">
 
 	<!-- Nombre -->
 	<div class="mb-3 row">
@@ -20,8 +20,7 @@
 		<div class="col-sm-9">
 
 			<div class="input-group">
-				<input class="form-control" placeholder="Agregar favorito">
-
+				<input class="form-control" formControlName="name" placeholder="Agregar favorito">
 
 				<button class="btn btn-outline-primary" type="button">
 					Agregar favorito
@@ -30,16 +29,15 @@
 		</div>
 	</div>
 
-
 	<!-- Lista de Juegos Favoritos -->
 	<div class="mb-3 row">
 		<label class="col-sm-3 col-form-label">Favoritos</label>
-		<div class="col-sm-9">
+		<div class="col-sm-9" formArrayName="favoriteGames">
 
-			<div class="mb-1">
+			<div class="mb-1" *ngFor="let favorite of favoriteGAmes.controls; let i = index">
 
 				<div class="input-group">
-					<input class="form-control">
+					<input [formControlName]="i" class="form-control">
 
 					<button class="btn btn-outline-danger" type="button">
 						Eliminar
