--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -7,9 +7,9 @@
 	<div class="mb-3 row">
 		<label class="col-sm-3 col-form-label">Nombre</label>
 		<div class="col-sm-9">
-			<input class="form-control" placeholder="Nombre de la persona">
-			<span class="form-text text-danger">
-				error message
+			<input class="form-control" formControlName="name" placeholder="Nombre de la persona">
+			<span *ngIf="isValidField('name')" class="form-text text-danger">
+				{{ getFieldError('name') }}
 			</span>
 		</div>
 	</div>
@@ -20,7 +20,7 @@
 		<div class="col-sm-9">
 
 			<div class="input-group">
-				<input class="form-control" formControlName="name" placeholder="Agregar favorito">
+				<input class="form-control" placeholder="Agregar favorito">
 
 				<button class="btn btn-outline-primary" type="button">
 					Agregar favorito
@@ -34,7 +34,7 @@
 		<label class="col-sm-3 col-form-label">Favoritos</label>
 		<div class="col-sm-9" formArrayName="favoriteGames">
 
-			<div class="mb-1" *ngFor="let favorite of favoriteGAmes.controls; let i = index">
+			<div class="mb-1" *ngFor="let favorite of favoriteGames.controls; let i = index">
 
 				<div class="input-group">
 					<input [formControlName]="i" class="form-control">
@@ -43,7 +43,7 @@
 						Eliminar
 					</button>
 				</div>
-				<span class="form-text text-danger">
+				<span *ngIf="isValidFieldInArray(favoriteGames, i)" class="form-text text-danger">
 					Este campo es requerido
 				</span>
 
