--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -20,9 +20,9 @@
 		<div class="col-sm-9">
 
 			<div class="input-group">
-				<input class="form-control" placeholder="Agregar favorito">
+				<input class="form-control" [formControl]="newFavorite" placeholder="Agregar favorito">
 
-				<button class="btn btn-outline-primary" type="button">
+				<button (click)="onAddToFavorite()" class="btn btn-outline-primary" type="button">
 					Agregar favorito
 				</button>
 			</div>
@@ -69,13 +69,13 @@
 
 
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 <br>
 
 <span>Value</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ 'object' | json }}</pre>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ newFavorite.valid | json }}</pre>
+<pre>{{ newFavorite.value | json }}</pre>
