--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -89,7 +89,7 @@
 <pre>{{ myForm.errors | json }}</pre>
 
 <h5>Nombre</h5>
-<pre>{{ myForm.value.name | json }}</pre>
+<pre>{{ myForm.controls['username'].errors | json }}</pre>
 
 <h5>Email</h5>
 <pre>{{ myForm.value.email | json }}</pre>
